// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockingError renders ACCESS_DENIED 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        You are not signed in.
      </h1>
      <div>
        You cancelled the sign in process.
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders AUTH_PROBLEM_API_PROBLEM 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        There was a problem with signing you in.
      </h1>
      <div>
        There was a problem with authentication. Please try again later or let us know via 
        <a
          href="mailto:hello@streetmix.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          email
        </a>
         or 
        <a
          href="https://twitter.com/intent/tweet?text=@streetmix"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        .
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders AUTH_PROBLEM_NO_ACCESS_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        There was a problem with signing you in.
      </h1>
      <div>
        There was a problem with authentication. Please try again later or let us know via 
        <a
          href="mailto:hello@streetmix.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          email
        </a>
         or 
        <a
          href="https://twitter.com/intent/tweet?text=@streetmix"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        .
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders AUTH_PROBLEM_NO_TWITTER_ACCESS_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        There was a problem with signing you in.
      </h1>
      <div>
        There was a problem with authentication. Please try again later or let us know via 
        <a
          href="mailto:hello@streetmix.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          email
        </a>
         or 
        <a
          href="https://twitter.com/intent/tweet?text=@streetmix"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        .
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders AUTH_PROBLEM_NO_TWITTER_REQUEST_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        There was a problem with signing you in.
      </h1>
      <div>
        There was a problem with authentication. Please try again later or let us know via 
        <a
          href="mailto:hello@streetmix.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          email
        </a>
         or 
        <a
          href="https://twitter.com/intent/tweet?text=@streetmix"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        .
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders CANNOT_CREATE_NEW_STREET_ON_PHONE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Streetmix works on tablets and desktops only.
      </h1>
      <div>
        If you follow another link to a specific street, you can view it on your phone – but you cannot yet create new streets.
        <br />
        <button>
          View an example street
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders FORCE_RELOAD_SIGN_IN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        You signed in in another window.
      </h1>
      <div>
        Please reload this page before continuing.
        <br />
        <button>
          Reload the page
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders FORCE_RELOAD_SIGN_OUT 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        You signed out in another window.
      </h1>
      <div>
        Please reload this page before continuing.
        <br />
        <button>
          Reload the page
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders FORCE_RELOAD_SIGN_OUT_401 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        You signed out in another window.
      </h1>
      <div>
        Please reload this page before continuing.
        <br />
        (Error RM2.)
        <br />
        <button>
          Reload the page
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders GALLERY_STREET_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Having trouble…
      </h1>
      <div>
        We’re having trouble loading this street.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders GENERIC_ERROR 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Something went wrong.
      </h1>
      <div>
        We’re sorry – something went wrong. Please try again later or let us know via 
        <a
          href="mailto:hello@streetmix.net"
          rel="noopener noreferrer"
          target="_blank"
        >
          email
        </a>
         or 
        <a
          href="https://twitter.com/intent/tweet?text=@streetmix"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        .
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders NEW_STREET_SERVER_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Having trouble…
      </h1>
      <div>
        We’re having trouble loading Streetmix.
        <br />
        <button>
          Try again
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders NO_STREET 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        No street selected.
      </h1>
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders NOT_FOUND 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Page not found.
      </h1>
      <div>
        Oh, boy. There is no page with this address!
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders SIGN_IN_401 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Having trouble…
      </h1>
      <div>
        We’re having trouble loading Streetmix.
        <br />
        (Error RM1.)
        <br />
        <button>
          Try again
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders SIGN_IN_SERVER_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Having trouble…
      </h1>
      <div>
        We’re having trouble loading Streetmix.
        <br />
        (Error 15A.)
        <br />
        <button>
          Try again
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders SIGN_OUT 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        You are now signed out.
      </h1>
      <div>
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders STREET_404 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Street not found.
      </h1>
      <div>
        Oh, boy. There is no street with this link!
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders STREET_404_BUT_LINK_TO_USER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Street not found.
      </h1>
      <div>
        There is no street with this link! But you can look at other streets by 
        <a
          href="/foo"
        >
          <div
            class="avatar"
          >
            <img
              alt="foo"
            />
          </div>
          foo
        </a>
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders STREET_410_BUT_LINK_TO_USER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        This street has been deleted.
      </h1>
      <div>
        There is no longer a street with this link, but you can look at other streets by 
        <a
          href="/foo"
        >
          <div
            class="avatar"
          >
            <img
              alt="foo"
            />
          </div>
          foo
        </a>
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders STREET_DATA_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Having trouble…
      </h1>
      <div>
        We’re having trouble loading Streetmix.
        <br />
        (Error 9B.)
        <br />
        <button>
          Try again
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders STREET_DELETED_ELSEWHERE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        This street has been deleted elsewhere.
      </h1>
      <div>
        This street has been deleted in another browser.
        <br />
        <button>
          Go to the homepage
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError renders UNSUPPORTED_BROWSER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="clouds-background"
    >
      <div
        class="rear-clouds"
      />
      <div
        class="front-clouds"
      />
    </div>
    <div
      class="error-content"
    >
      <h1>
        Streetmix doesn’t work on your browser.
      </h1>
      <div>
        <p>
          Sorry about that. You might want to try 
          <a
            href="https://www.google.com/chrome"
            rel="noopener noreferrer"
            target="_blank"
          >
            Chrome
          </a>
          , 
          <a
            href="https://www.mozilla.org/firefox"
            rel="noopener noreferrer"
            target="_blank"
          >
            Firefox
          </a>
          , 
          <a
            href="https://www.microsoft.com/en-us/windows/microsoft-edge"
            rel="noopener noreferrer"
            target="_blank"
          >
            Microsoft Edge
          </a>
          , or Safari.
        </p>
        <p>
          Are you on Internet Explorer? 
          <a
            href="https://streetmix.readthedocs.io/en/latest/support/faq/#does-streetmix-support-internet-explorer"
            rel="noopener noreferrer"
            target="_blank"
          >
            Find out more.
          </a>
        </p>
        <p>
          If you think your browser should be supported, please contact us via 
          <a
            href="'mailto:hello@streetmix.net"
            rel="noopener noreferrer"
            target="_blank"
          >
            email
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
